fix display on mobile

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -137,5 +137,7 @@ footer p {
 
   footer {
       padding: 0;
+      text-align: center;
+      margin-top: 30%;
   }
 }
