--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,8 +4,16 @@ html {
     
   }
 
+body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 a {
     text-shadow: none;
+}
+
+p {
+    font-weight: normal;
 }
 
 * {
